# emby-range-cache-proxy

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  config.example.json  docker-compose.example.yml  pyproject.toml
deploy/: Caddyfile.range-cache.example  emby-range-cache-proxy.service
docs/: deploy-test-server.md
docs/superpowers/plans/: 2026-07-03-emby-range-cache-proxy-phase2.md  2026-07-03-emby-range-cache-proxy.md
docs/superpowers/specs/: 2026-07-03-emby-range-cache-proxy-design.md  2026-07-03-emby-range-cache-proxy-phase2-design.md  2026-07-05-local-hdd-resume-window.md
go/: README.md  go.mod
go/cmd/emby-range-cache-proxy/: main.go  main_test.go
go/deploy/: emby-range-cache-proxy-go.service
go/internal/app/: server.go  server_test.go
go/internal/cache/: key.go  key_test.go
go/internal/config/: config.go  config_test.go  effective.go
go/internal/diskfree/: diskfree_other.go  diskfree_unix.go
go/internal/emby/: auth.go  auth_test.go
src/emby_range_cache_proxy/: app.py  auth.py  cache.py  cli.py  config.py  middle_cache.py  models.py  openlist.py  origin.py  prefetch.py  prewarm.py  ranges.py  requests.py  sanitize.py  session.py  session_observer.py  sources.py  state.py
tests/: test_app.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_deploy_examples.py  test_middle_cache.py  test_openlist.py  test_origin.py  test_prefetch.py  test_prewarm.py  test_ranges.py  test_requests.py  test_sanitize.py  test_security_behavior.py  test_session.py  test_session_observer.py  test_sources.py  test_state.py
(+21 files in other folders)
